More skin tones

--- a/website/index.html
+++ b/website/index.html
@@ -316,8 +316,8 @@
 			<div class="col col-sm-6 text-center">
                 <h3>Logo Shirts and More!</h3>
                 <a target="_blank" href="https://yellowfork.threadless.com/collections/little-family-tree/">
-                    <img src="sticker_logo.png" />
-                   <h4>Available through our Threadless store!</h4>
+                    <img src="GlobalAncestorswords.png" />
+                   <h4>Free Shipping Through Feb 14, 2017 on orders over $45 with code VDAY186531</h4>
                     <p>&nbsp;</p>
                 </a>
             </div>
