--- a/website/dressup.html
+++ b/website/dressup.html
@@ -38,6 +38,7 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="socialbuttons">
             <a class="socialmedia" href="http://www.facebook.com/LittleFamilyTree" title="Visit Little Family Tree on Facebook"><i class="fa fa-facebook-square"></i></a>
+			<a class="socialmedia" href="http://www.instagram.com/littlefamilytreeapp" title="Visit Little Family Tree on Instagram"><i class="fa fa-instagram"></i></a>
         </div>
         <div class="navbar-header">
             <a class="navbar-brand page-scroll" href="index.html">
@@ -132,7 +133,7 @@
             <div class="game-video embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" width="380" height="285" src="https://www.youtube.com/embed/uDdiKdUKhWE?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
-            <a href="Screenshot_heritage_calc.png"><img class="guide-image" src="Screenshot_heritage_calc.png" border="0"/></a>
+            <img class="guide-image" src="Screenshot_heritage_calc.png" border="0"/>
         </div>
     </div>
     <div class="row">
@@ -150,8 +151,12 @@
             </p>
             <p>
                 Clothing for other places and cultures are regularly being added to the game.  If
-                you have a request for a particular culture, please contact us from the home page
-                and we will try to give it a higher priority for a future update of the game.
+                you have a request for a particular culture or country, please contact us from the home page
+                and we will give it a higher priority for a future update of the game.
+            </p>
+			 <p>
+                New! Select a skin tone for the dress up dolls by pressing the cartoon face on the top bar menu 
+				and then choose a skin tone from the pop-up menu. Change the skin tone at any time during the game.
             </p>
             <p>
                 Tap the home button <img src="home.png" height="30" /> at any time to return to the
@@ -159,7 +164,8 @@
             </p>
         </div>
         <div class="col-sm-4 text-center">
-            <a href="Screenshot_heritage_calc.png"><img class="guide-image" src="Screenshot_dress_up.png" border="0"/></a>
+            <img class="guide-image" src="Screenshot_dress_up.png" border="0"/>
+            <img class="guide-image" src="DarkToneDollskinchooser.jpg" border="0"/>
         </div>
     </div>
     <div class="row">
