--- a/website/index.html
+++ b/website/index.html
@@ -38,6 +38,7 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="socialbuttons">
             <a class="socialmedia" href="http://www.facebook.com/LittleFamilyTree" title="Visit Little Family Tree on Facebook"><i class="fa fa-facebook-square"></i></a>
+			<a class="socialmedia" href="http://www.instagram.com/littlefamilytreeapp" title="Visit Little Family Tree on Instagram"><i class="fa fa-instagram"></i></a>
         </div>
         <div class="navbar-header">
             <a class="navbar-brand page-scroll" href="#page-top">
@@ -113,6 +114,7 @@
                     <p>&nbsp;</p>
                 </div>
                 <div class="col-sm-7 text-center large-title">
+					<img src="50percentsalesign.png" width="233" height="200"/>
 					<img src="little_family_tree.png" class="logo-text-img" />
                     <h2 class="subtitle">
                         A mobile app that turns your online family tree into interactive games that teach your child about their family history.
@@ -140,9 +142,8 @@
                 <hr />
                 <p>
                     Personal family history information is obtained by having an adult login to an online family tree such as
-                    <a href="http://www.familyearch.org">FamilySearch</a> or <a href="http://www.phpgedview.net">PhpGedView</a>.
-                    An online family tree account is required to play the game but a <a href="http://www.familyearch.org">FamilySearch</a>
-                    account can be obtained for free at <a href="http://www.familyearch.org">FamilySearch.org</a>.
+                    <a href="http://www.familyearch.org">FamilySearch</a>, <a href="http://www.myheritage.com">MyHeritage</a> or <a href="http://www.phpgedview.net">PhpGedView</a>.
+                    An online family tree account is required to play the game.</a>.
                 </p>
 			</div>
 			<div class="col-sm-5 text-center" style="margin-left: 30px">
@@ -305,6 +306,15 @@
                             <h4>Learn more about our FamilySearch
                             integration.</h4>
                         </a>
+                    </li>
+					<li>
+                        <a target="_blank" href="https://www.myheritage.com/">
+                            <img class="fsicon small-margin" src="MH_logo_RGB.jpg" border="0"/><br />
+                        </a>
+                        <a href="myheritage.html">
+                            <h4>Learn more about our MyHeritage
+                            integration.</h4>
+                        </a>
                         <p>&nbsp;</p>
                     </li>
                     <li>
@@ -365,7 +375,7 @@
                     <img src="growing_plant7.png" border="0" height="120" />
                 </p>
                 <p>&nbsp;</p>
-                <p>&copy; 2015 Yellow Fork Technologies LLC</p>
+                <p>&copy; 2015-2017 Yellow Fork Technologies LLC</p>
                 <p>&nbsp;</p>
             </div>
         </div>
