--- a/website/parentsguide.html
+++ b/website/parentsguide.html
@@ -42,6 +42,7 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="socialbuttons">
             <a class="socialmedia" href="http://www.facebook.com/LittleFamilyTree" title="Visit Little Family Tree on Facebook"><i class="fa fa-facebook-square"></i></a>
+			<a class="socialmedia" href="http://www.instagram.com/littlefamilytreeapp" title="Visit Little Family Tree on Instagram"><i class="fa fa-instagram"></i></a>
         </div>
         <div class="navbar-header">
             <a class="navbar-brand page-scroll" href="index.html">
@@ -119,6 +120,12 @@
             <div class="row">
                 <div class="col-sm-8 col-lg-offset-1">
                     <h3>Data</h3>
+					<p>
+                        Data for the games comes from your online family tree. When you start the app for the first time, you will be prompted to login to your online 
+						tree. Little Family Tree currently supports trees from FamilySearch, MyHeritage, and PhpGedView. If you have previously connected to an online tree, 
+						and would like to change to a different account or online tree service, you must uninstall and reinstall Little Family Tree to begin again with the 
+						new account.
+                    </p>
                     <p>
                         Data from your online family tree is loaded in the background over WiFi while your
                         child plays.  As more data is loaded, more of your child's unique heritage is
@@ -138,10 +145,13 @@
 					<a href="familysearch.html">
 						<h5>Learn more about our FamilySearch integration.</h5>
                     </a>
+					<a href="myheritage.html">
+						<h5>Learn more about our MyHeritage integration.</h5>
+                    </a>
                     <p>&nbsp;</p>
             </div>
                 <div class="col-sm-3 text-center">
-                    <a href="Screenshot_matching.png"><img class="guide-image" src="Screenshot_matching.png" border="0"/></a>
+                    <img src="LFTOnlineTreeService.png" border="0"/>
                 </div>
             </div>
     <div class="row">
@@ -176,6 +186,11 @@
             <p>
                 <a href="https://familysearch.org/learningcenter/lesson/how-to-add-photos-to-your-family-tree/1187" target="_blank">
                     Learn how to add photos to your FamilySearch Family Tree
+                </a>
+            </p>
+			<p>
+                <a href="http://helpcenter.myheritage.com/Photos/Add-Photos-and-Videos/" target="_blank">
+                    Learn how to add photos to your MyHeritage family tree
                 </a>
             </p>
         </div>
@@ -299,9 +314,16 @@
                 get the name just right. Use the garbage icon to delete the recorded name and return
                 to the device voice at any time. Repeat the steps for any names you'd like to record.
             </p>
+			<h3>Skin Tones</h3>
+			<p>You may now choose a default skin tone for the cartoon faces and paper dolls in Little Family Tree.
+			Find this under settings -- default skin tone
+            </p>
         </div>
-        <div class="col-sm-3 text-center">
-
+		 <div class="col-sm-3">
+			<img style="width: 250px;" src="DefaultSkinTone.png"/>
+        </div>
+		 <div class="col-sm-3">
+			<img style="width: 250px;" src="ChooseSkinColorSettings.png"/>
         </div>
     </div>
 </div>
