--- a/website/yellowforktech.com/index.html
+++ b/website/yellowforktech.com/index.html
@@ -56,6 +56,9 @@
                 <li>
                     <a class="page-scroll" href="#about">Contact Us</a>
                 </li>
+				<li>
+                    <a class="page-scroll" target="_blank" href="https://yellowfork.threadless.com/">Logo Shirts & More</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -96,15 +99,26 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-4 col-lg-offset-1">
+            <div class="col-sm-3 col-lg-offset-1">
                 <a href="http://www.littlefamilytree.com">
-                    <img src="http://littlefamilytree.com/little_family_logo.png" class="img-responsive" alt="">
+                    <img src="lft-logo-small.png" class="img-responsive" alt="" />
                 </a>
+				<p>&nbsp;</p>
+                <p>Little Family Tree is a mobile app that turns your online family tree into interactive games that teach your child about their family history.</p>
             </div>
-            <div class="col-sm-4">
-                <p>&nbsp;</p>
-                Little Family Tree is a game for mobile devices that engages toddlers and pre-school
-                children with their personal family history.
+            <div class="col-sm-3">
+                <a href="https://www.genquizitive.com">
+                    <img src="gq-logo-med300.png" class="img-responsive" alt="" />
+                </a>
+				<p>&nbsp;</p>
+                <p>GenQuizitive is a social network quiz game where players challenge each other to trivia quizzes about their genealogy.</p>
+            </div>
+			<div class="col-sm-3">
+                <a target="_blank" href="https://yellowfork.threadless.com/">
+                    <img src="GlobalAncestorswords.png" class="img-responsive" alt="" />
+					<h3>Logo Shirts and More!</h3>
+					<p>Free Shipping Through Feb 14, 2017 on orders over $45 with code VDAY186531</p>
+                </a>
             </div>
         </div>
     </div>
@@ -133,7 +147,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <p>&nbsp;</p>
-                <p>&copy; 2015 Yellow Fork Technologies LLC</p>
+                <p>&copy; 2015-2017 Yellow Fork Technologies LLC</p>
                 <p>&nbsp;</p>
             </div>
         </div>
