--- a/website/tree.html
+++ b/website/tree.html
@@ -38,6 +38,7 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="socialbuttons">
             <a class="socialmedia" href="http://www.facebook.com/LittleFamilyTree" title="Visit Little Family Tree on Facebook"><i class="fa fa-facebook-square"></i></a>
+			<a class="socialmedia" href="http://www.instagram.com/littlefamilytreeapp" title="Visit Little Family Tree on Instagram"><i class="fa fa-instagram"></i></a>
         </div>
         <div class="navbar-header">
             <a class="navbar-brand page-scroll" href="index.html">
