Adding finnish clothes and fixing bugs

--- a/website/yellowforktech.com/index.html
+++ b/website/yellowforktech.com/index.html
@@ -117,7 +117,7 @@
                 <a target="_blank" href="https://yellowfork.threadless.com/">
                     <img src="GlobalAncestorswords.png" class="img-responsive" alt="" />
 					<h3>Logo Shirts and More!</h3>
-					<p>Free Shipping Through Feb 14, 2017 on orders over $45 with code VDAY186531</p>
+					<!--<p>Free Shipping Through Feb 14, 2017 on orders over $45 with code VDAY186531</p>-->
                 </a>
             </div>
         </div>
