--- a/website/yellowforktech.com/index.html
+++ b/website/yellowforktech.com/index.html
@@ -139,15 +139,13 @@
                 <a href="mailto:service@yellowforktech.com">service@yellowforktech.com</a>
             </div>
             <div class="col-lg-4 text-center">
-                <address>Yellow Fork Technologies LLC
-                <br />5526 W. 13400 S. #448
-                <br />Herriman, UT  84096</address>
+                <address>Yellow Fork Technologies LLC</address>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <p>&nbsp;</p>
-                <p>&copy; 2015-2017 Yellow Fork Technologies LLC</p>
+                <p>&copy; 2015-2018 Yellow Fork Technologies LLC</p>
                 <p>&nbsp;</p>
             </div>
         </div>
