--- a/website/index.html
+++ b/website/index.html
@@ -348,19 +348,23 @@
         </div>
         <div class="row">
             <div class="contact-section col-lg-3 col-lg-offset-2 col-sm-4 text-left">
+                    <p>&nbsp;</p><p>&nbsp;</p>
                 <button type="button" onclick="showContactForm(); return false;" class="btn btn-primary">Contact Us!</button>
             </div>
 
             <div class="contact-section col-lg-3 col-sm-4 text-center">
+                <p>&nbsp;</p><p>&nbsp;</p>
                 <p>
                     <a href="http://www.facebook.com/LittleFamilyTree" title="Visit Little Family Tree on Facebook"><i class="fa fa-facebook-square socialmedia"></i> Facebook Page</a>
                 </p>
             </div>
 
             <div class="contact-section col-lg-3 col-sm-4 text-center">
+                <p>
+                    <img src="large_logo.png" border="0" height="80" />
+                </p>
                 <address><a href="http://www.yellowforktech.com">Yellow Fork Technologies LLC</a>
-                <br />5526 W. 13400 S. #448
-                <br />Herriman, UT  84096</address>
+                </address>
             </div>
         </div>
         <div class="row">
@@ -377,7 +381,7 @@
                     <img src="growing_plant7.png" border="0" height="120" />
                 </p>
                 <p>&nbsp;</p>
-                <p>&copy; 2015-2017 Yellow Fork Technologies LLC</p>
+                <p>&copy; 2015-2018 Yellow Fork Technologies LLC</p>
                 <p>&nbsp;</p>
             </div>
         </div>
