removing references to premium

--- a/website/parentsguide.html
+++ b/website/parentsguide.html
@@ -74,12 +74,6 @@
                 <li>
                     <a class="page-scroll" href="index.html#about">About Us</a>
                 </li>
-                <li>
-                    <a class="page-scroll" href="localevents.html">Event Resources</a>
-                </li>
-				<li>
-                    <a class="page-scroll" target="_blank" href="https://yellowfork.threadless.com/collections/little-family-tree/">Logo Shirts & More</a>
-                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -263,10 +257,7 @@
             <h3>Follow the Stars!</h3>
             <p>
                 Portals to special games and activities are highlighted by stars on the home screen.
-                Tap the items behind the stars to start those activities. Yellow stars highlight free
-                activities, and red stars highlight premium activities.  You may try a premium activity up to 3 times
-                after which a premium upgrade will be required to continue playing that activity. A one-time premium upgrade
-                may be purchased by an adult at anytime.
+                Tap the items behind the stars to start those activities. 
             </p>
             <p>
                 Visit the <a href="index.html#games">Games</a> section of this site to learn more
@@ -280,9 +271,6 @@
             <img class="star" src="star1.png" />
             <img class="star" src="star1.png" />
             <img class="star" src="star1.png" />
-            <img class="star" src="redstar1.png" />
-            <img class="star" src="redstar1.png" />
-            <img class="star" src="redstar1.png" />
         </div>
     </div>
     <div class="row">
