remove references to myheritage

--- a/website/parentsguide.html
+++ b/website/parentsguide.html
@@ -116,7 +116,7 @@
                     <h3>Data</h3>
 					<p>
                         Data for the games comes from your online family tree. When you start the app for the first time, you will be prompted to login to your online 
-						tree. Little Family Tree currently supports trees from FamilySearch, MyHeritage, and PhpGedView. If you have previously connected to an online tree, 
+						tree. Little Family Tree currently supports trees from FamilySearch and PhpGedView. If you have previously connected to an online tree, 
 						and would like to change to a different account or online tree service, you must uninstall and reinstall Little Family Tree to begin again with the 
 						new account.
                     </p>
@@ -138,9 +138,6 @@
                     </p>
 					<a href="familysearch.html">
 						<h5>Learn more about our FamilySearch integration.</h5>
-                    </a>
-					<a href="myheritage.html">
-						<h5>Learn more about our MyHeritage integration.</h5>
                     </a>
                     <p>&nbsp;</p>
             </div>
@@ -180,11 +177,6 @@
             <p>
                 <a href="https://familysearch.org/learningcenter/lesson/how-to-add-photos-to-your-family-tree/1187" target="_blank">
                     Learn how to add photos to your FamilySearch Family Tree
-                </a>
-            </p>
-			<p>
-                <a href="http://helpcenter.myheritage.com/Photos/Add-Photos-and-Videos/" target="_blank">
-                    Learn how to add photos to your MyHeritage family tree
                 </a>
             </p>
         </div>
